<resources>
    <string name="app_name">WooDroid</string>
    <string name="title_activity_products">WooDroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="add_cart">Add to Cart</string>
    <string name="add_order">Order</string>
    <string name="product_category">Category:</string>
    <string name="product_tag">Tag:</string>
    <string name="products_desc_title">Description</string>
    <string name="product_desc">Short product description</string>
    <string name="checkout_title">Checkout</string>
    <string name="place_order">Place Order</string>
    <string name="your_name">Your name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="your_phone">Phone</string>
    <string name="your_country">Country</string>
    <string name="your_address">Address</string>
    <string name="your_province">Province</string>
    <string name="your_postcode">Postcode / ZIP</string>
    <string name="your_city">Town / City</string>
    <string name="order_notes">Order Notes</string>
    <string name="msg_first_name">First name must be filled</string>
    <string name="msg_last_name">Last name must be filled</string>
    <string name="msg_email">Please enter correct Email address</string>
    <string name="msg_phone_number">Phone number must be filled</string>
    <string name="msg_address">Address must be filled</string>
    <string name="msg_province">Please select your provinces</string>
    <string name="msg_city">Please select your city</string>
    <string name="msg_shipping">Please select your Shipping method</string>
    <string name="msg_postalcode">Postal code must be filled</string>
    <string name="courier_options">Courier Options</string>
    <string name="msg_courier">Select shipping Courier</string>
    <string name="confirmation_detail">After succesfully completing order, please send us your Transaction ID, your name, bank account number and the amount of money transfered to our email address: mystore@droid.com.</string>
</resources>
